fluxcd/components/hextris/00-hextris.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: hextris
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hextris
  namespace: hextris
  labels:
    app.kubernetes.io/name: hextris
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: hextris
  replicas: 1
  template:
    metadata:
      labels:
        app.kubernetes.io/name: hextris
    spec:
      tolerations:
        - key: "dedicated"
          operator: "Equal"
          value: "hextris"
          effect: "NoSchedule"
      containers:
        - name: hextris
          image: 404cat/hextris-nginx:amd64
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /
              port: http
          readinessProbe:
            httpGet:
              path: /
              port: http
---
apiVersion: v1
kind: Service
metadata:
  name: hextris
  namespace: hextris
  labels:
    app.kubernetes.io/name: hextris
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: hextris
  ports:
    - name: http
      port: 8080
      targetPort: 8080
      protocol: TCP
