fluxcd/components/hextris/01-hextris-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hextris
  namespace: hextris
  labels:
    app: hextris
spec:
  tls:
    - hosts:
      - hextris.alexandertsvetkov.com
      secretName: hextris-tls
  ingressClassName: nginx
  rules:
    - host: hextris.alexandertsvetkov.com
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: hextris
              port:
                number: 8080
